<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create a new User"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/_24sdp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_error"
                android:hint="@string/email_hint"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/department_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:dropDownWidth="match_parent"
                android:prompt="@string/department_dropdown_title" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/target_hour_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Target Hours"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/target_hour"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:hint="@string/password_hint"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit_user"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryMiddle"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_32sdp"
                android:text="@string/submit_user"/>

            <TextView
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_department"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/_24sdp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/department_name_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department_name"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/department_name"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/supervisor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                />

            <Button
                android:id="@+id/submit_dep"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryMiddle"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_32sdp"
                android:text="@string/submit_department"/>



        </LinearLayout>
    </LinearLayout>
</ScrollView>
