...
        android:layout_below="@+id/login_error"
        android:hint="@string/email_hint"
        app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
        app:hintTextAppearance="@style/AppTheme.Text.HintText" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email"
            style="@style/AppTheme.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText" />
...
        app:passwordToggleEnabled="true"
        android:hint="@string/password_hint"
        app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
        app:hintTextAppearance="@style/AppTheme.Text.HintText" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            style="@style/AppTheme.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_wrapper"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/login_button"
...
