...
    <string name="relogging_user_please_wait">Relogging User Please wait</string>
    <string name="department_overview">Department Overview</string>
    <string name="details_for_department">Details for Department</string>
    <string name="supervisor_name">SuperVisor name</string>
    <string name="supervisor">Supervisor: </string>
    <string name="users">Users</string>
    <string name="edit_department">Edit Department</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <plurals name="error_week_password">
        <item quantity="one">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
...
