<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.EditProfileFragment"
    android:id="@+id/edit_profile_fragment"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_name_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_name"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_name"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/_12sdp"
                android:text="@string/save_name"
                android:textColor="@color/colorWhite" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_old_password_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:hint="@string/edit_profile_old_password"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_old_password"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_password_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_password"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_password"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_repeat_password_wrapper"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_confirm_password"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_repeat_password"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                    app:hintTextAppearance="@style/AppTheme.Text.HintText" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/save_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/_12sdp"
                android:text="@string/save_password"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarEditProfil"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center_vertical|center_horizontal" />

</FrameLayout>
